rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_applied_to_tuple_struct.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::mutator;

#[mutator(rust_writer::ast::implementors::ItemToTrait<'a>, rust_writer::ast::implementors::ItemToImpl<'a>)]
struct SomeStruct(u8); 

fn main(){}
