rust_writer_procedural/tests/ui/compile_fail/mutator_fails_if_applied_to_tuple_struct.stderr
error: Expected unit struct or named-field struct.
 --> tests/ui/compile_fail/mutator_fails_if_applied_to_tuple_struct.rs:6:8
  |
6 | struct SomeStruct(u8);
  |        ^^^^^^^^^^
